force-app/main/default/objects/AIModel__c/AIModel__c.object-meta.xml
<CustomObject>
    <description>Einstein AI Model Definition</description>
    <label>AI Model</label>
    <nameField>
        <label>AI Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>