force-app/main/default/objects/AIModel__c/fields/DataSetId__c.field-meta.xml
<CustomField>
    <fullName>DataSetId__c</fullName>
    <description>Enstein Data Set Identifier generated by the salesforce AI platform</description>
    <label>Data Set ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>