force-app/main/default/objects/AIModel__c/fields/ModelId__c.field-meta.xml
<CustomField>
    <fullName>ModelId__c</fullName>
    <description>Model Identifier generated by Salesforce Einstein Platform</description>
    <label>Model Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>