force-app/main/default/objects/AIModel__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>AI Model Type that indicate what purpose this model is trained for</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Image Classification</fullName>
            </value>
            <value>
                <fullName>Object Detection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>